WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293996
[Safe CPP] Address Warnings in ReadableStreams
https://bugs.webkit.org/show_bug.cgi?id=293996
Summary
[Safe CPP] Address Warnings in ReadableStreams
Brandon
Reported
2025-06-03 18:52:59 PDT
Address safe cpp warnings in ReadableStreams.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-03 18:53:11 PDT
<
rdar://problem/152545521
>
Brandon
Comment 2
2025-06-03 18:54:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46296
EWS
Comment 3
2025-06-04 08:50:34 PDT
Committed
295815@main
(e42cc37941bf): <
https://commits.webkit.org/295815@main
> Reviewed commits have been landed. Closing PR #46296 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug