[Safe CPP] Address Warnings in ReadableStreams https://bugs.webkit.org/show_bug.cgi?id=293996 rdar://problem/152545521

Reviewed by Chris Dumez.

Address safe cpp warnings in ReadableStreams.

* Source/WebCore/Modules/streams/ReadableStream.h:
* Source/WebCore/SaferCPPExpectations/UncountedCallArgsCheckerExpectations:

Canonical link: https://commits.webkit.org/295815@main